# SCHEDULE_SALLY

./: CMakeLists.txt  README.md  run.bat
shaders/: compile.bat  main.frag  main.vert  text.frag  text.vert
shaders/compiled/: main_frag.spv  main_vert.spv  text_frag.spv  text_vert.spv
src/: engine.c  engine.cpp  engine.h  gfx.h  main.c  main.cpp  types.h  util.c  util.cpp  util.h
